# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  27 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Document that depend_eth0() only works in conf.d/net and
    not conf.d/net.$profile, #137727.

  23 Jun 2006; Roy Marples <uberlord@gentoo.org>:
  
    Fix rc-status broken link reporting properly, #137656

  19 Jun 2006; Roy Marples <uberlord@gentoo.org>:
 
    Preliminary support for dscape ieee80211 stack devices.
 
  18 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    vlan id's can now be treated as individual interfaces via init scripts
    provided they depend on the real interface, #137029

  15 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now supports the --verbose flag setting RC_VERBOSE="yes"
    When RC_VERBOSE="yes" and RC_PARALLEL_STARTUP="yes" and there is no
    exclusive lock (ie, init script not started via rc) then we don't hide
    init script output by setting RC_QUIET_STDOUT, #136034.

  14 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    {start,stop}_volumes moved to rc and halt.sh respectively.

    net services are now depended upon more correctly.

    wireless cards now get their txpower set to auto before starting.

    Fix "before net" dependencies, #135872 thanks to Oldrich Jedlicka.

    pppd.sh now uses passwordfd instead of very nasty regex stuff,
    thanks to Oldrich Jedlicka, Alin Nastac and me :), #134337

  12 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    We now have a Makefile to install our scripts.

  06 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    shutdown.sh now uses the INIT_HALT variable correctly, #135740
    thanks to Steve Moerk.

* baselayout-1.12.1 (05 Jun 2006)

  05 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Restore the man user/group, #113298 thanks to Chris Gianelloni.

    Fix typo in /sbin/rc, #135323 thanks to Ed Catmur.

    rc now stops services again, #135340.
