@@ -832,6 +832,7 @@ if [[ ${SOFTLEVEL} == "reboot" || ${SOFTLEVEL} == "shutdown" ]] ; then
 fi
 
 if [[ ${SOFTLEVEL} == "single" ]] ; then
+	rm -rf "${svcdir}/softscripts.new"
 	/sbin/sulogin ${CONSOLE}
 	exit 0
 fi
