@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  10 Jul 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Fixed some internal net dependencies with >1 active net service
+    Services can now be scheduled on any inactive services.
+
   27 Jun 2006; Roy Marples <uberlord@gentoo.org>:
 
     Document that depend_eth0() only works in conf.d/net and
